static/styles.css
@import url(https://fonts.bunny.net/css?family=major-mono-display:400|space-mono:400,400i,700,700i);

.position-child-center {
  display: grid;
  place-items: center;
}

.position-child-vertical-center {
  display: flex;
  align-items: center;
}

.position-child-horizontal-center {
  display: flex;
  justify-content: center;
}

.size-page {
  height: 100%;
  width: 100%;
}

html,
body {
  font-family: "Space Mono", monospace;
  height: 100%;
  margin: 0;
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  text-align: center;
}

h1 {
  font-family: "Major Mono Display", monospace;
  font-size: 10em;
  margin-bottom: 2.5vh;
}

h2 {
  font-size: 2.5em;
}

#navbar {
  background-color: rgb(32, 32, 32);
  list-style-type: none;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: fixed;
  width: 100%;
}

#navbar #home-button {
  margin: 0 1vw;
}

#navbar a {
  color: rgb(255, 255, 255);
  display: block;
  font-family: "Major Mono Display", monospace;
  font-size: 1.5vw;
  margin: 1vw;
  text-decoration: none;
}

#navbar div {
  background-color: rgb(255, 255, 255);
  border-radius: 100%;
  height: 2vw;
  width: 2vw;
}

#navbar img {
  height: 75%;
  width: 75%;
}

#navbar li:has(a[aria-current='page']) {
  background-color: rgb(64, 64, 64);
}

#four-o-four {
  box-sizing: border-box;
  padding: 10%;
}

#four-o-four #icon-inline-text {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

#four-o-four img {
  width: 10%;
  height: 10%;
}

#portfolio h3 {
  font-size: 1.5em;
}

#about h3,
h4,
h5,
h6 {
  text-align: left;
}

#about h3 {
  font-size: 5em;
}

#about h4 {
  font-size: 2em;
}

